<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    android:orientation="vertical"
    tools:context="com.fourall.exercicioselecaomobile.activities.ElementDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/element_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_view_voltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="◀︎"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_view_localizacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Cidade - Bairro"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:id="@+id/botao_pesquisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margem_padrao_media"
                android:padding="16dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icone_pesquisa" />

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/altura_logo_elemento"
                android:scaleType="centerCrop"
                android:src="@drawable/rectangle_placeholder" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linear_layout_container_infomacoes_gerais"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/margem_padrao_media"
                android:layout_marginEnd="@dimen/margem_padrao_grande"
                android:background="@drawable/circunferencia_branca"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_padrao_media"
                    android:src="@drawable/icone_avatar" />
            </LinearLayout>


            <TextView
                android:id="@+id/text_view_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_view_logo"
                android:layout_margin="@dimen/margem_padrao_media"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_layout_container_infomacoes_gerais"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/text_view_titulo"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/padding_padrao_media"
                android:paddingTop="@dimen/padding_padrao_media">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/padding_padrao_media"
                    android:paddingStart="@dimen/padding_padrao_media">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <LinearLayout
                            android:id="@+id/layout_ligar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icone_ligar" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margem_padrao_muito_pequena"
                                android:text="@string/ligar"
                                android:textColor="@color/colorPrimary"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_servicos"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icone_servicos" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margem_padrao_muito_pequena"
                                android:text="@string/servicos"
                                android:textColor="@color/colorPrimary"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_endereco"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icone_endereco" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margem_padrao_muito_pequena"
                                android:text="@string/endereco"
                                android:textColor="@color/colorPrimary"
                                android:textSize="10sp" />
                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/layout_comentarios"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icone_comentarios" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margem_padrao_muito_pequena"
                                android:text="@string/comentarios"
                                android:textAppearance="?android:textAppearanceSmall"
                                android:textColor="@color/colorPrimary"
                                android:textSize="10sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/layout_favoritos"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/icone_favoritos" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margem_padrao_muito_pequena"
                                android:text="@string/favoritos"
                                android:textColor="@color/colorPrimary"
                                android:textSize="10sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="@dimen/margem_padrao_media"
                        android:layout_marginTop="@dimen/margem_padrao_media"
                        android:background="@color/cor_divisor" />

                    <TextView
                        android:id="@+id/text_view_texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margem_padrao_media"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <ImageView
                        android:id="@+id/image_view_mapa"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/altura_mapa_elemento"
                        android:scaleType="centerCrop"
                        android:src="@drawable/rectangle_placeholder" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="end"
                        android:layout_below="@+id/image_view_mapa"
                        android:background="@color/colorPrimary">

                        <TextView
                            android:id="@+id/text_view_endereco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margem_texto_endereco"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="@android:color/white" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="@dimen/diametro_icone_endereco"
                        android:layout_height="@dimen/diametro_icone_endereco"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="@dimen/margem_padrao_pequena"
                        android:layout_marginEnd="@dimen/margem_padrao_pequena"
                        android:background="@drawable/circunferencia_branca"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icone_endereco" />
                    </LinearLayout>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/comentario_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
